fix: use cmd.exe for `task` execution
If an incorrect .exe file is executed in Windows Bash, the following error is thrown:

    .../task: cannot execute binary file: Exec format error

This is not the expected error message. So instead of Bash, use cmd.exe.

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -68,14 +68,14 @@ jobs:
           echo '{}' > ./package.json
           npm install '@go-task/cli@${{ env.go-task-version }}'
 
-      - name: Run task command
-        shell: bash
-        run: |
-          if [[ -f ./node_modules/.bin/task.exe ]]; then
-            ./node_modules/.bin/task.exe --version
-          else
-            task --versiond
+          readonly bin_dir='node_modules/.bin'
+          if [[ -f "./${bin_dir}/task.exe" ]]; then
+            realpath "./${bin_dir}" >> "${GITHUB_PATH}"
           fi
+
+      - name: Run task command
+        shell: cmd
+        run: task --version
 
   install-using-chocolatey:
     runs-on: windows-latest
@@ -84,6 +84,7 @@ jobs:
         run: choco install go-task --version ${{ env.go-task-version }} --allow-multiple-versions --yes
 
       - name: Run task command
+        shell: cmd
         run: task --version
 
   install-from-github-release:
@@ -99,4 +100,5 @@ jobs:
           done
 
       - name: Run task command
+        shell: cmd
         run: task --version
