fix: use cmd.exe for `task` execution (https://github.com/sounisi5011/test-if-we-can-run-go-task-on-windows-on-github-workflow/pull/2)
* fix: use cmd.exe for `task` execution ( https://github.com/sounisi5011/test-if-we-can-run-go-task-on-windows-on-github-workflow/pull/2/commits/c7a6467dee4d7b2e58cbe2da5802de2ec1952cd2 )

    If an incorrect .exe file is executed in Windows Bash, the following error is thrown:

        .../task: cannot execute binary file: Exec format error

    This is not the expected error message. So instead of Bash, use cmd.exe.

* refactor: if the `task` command is not found, update the `Path` environment variable ( https://github.com/sounisi5011/test-if-we-can-run-go-task-on-windows-on-github-workflow/pull/2/commits/291081d181c033e10e2e31d9759582a5e7caa242 )

* fix: search for the directory where task.exe is installed ( https://github.com/sounisi5011/test-if-we-can-run-go-task-on-windows-on-github-workflow/pull/2/commits/15e9bc406f3f042139fa7b55737aeba751de1b5d )

* feat: show the `task` command path before running the `task` command ( https://github.com/sounisi5011/test-if-we-can-run-go-task-on-windows-on-github-workflow/pull/2/commits/edc0ae509d70e491a4349ddacaf6b6b63eb01fb7 )

* fix: convert paths to be added to the `Path` environment variable to Windows format ( https://github.com/sounisi5011/test-if-we-can-run-go-task-on-windows-on-github-workflow/pull/2/commits/c5656b6aa06a49e3514ef946bd0a2d94863c440e )

    In Bash on Windows, each command returns a Cygwin POSIX-style pathname.
    Probably adding these file paths to `GITHUB_PATH` will not be detected correctly.

* refactor: display the `task` command path in a separate step from the execution of the `task` command ( https://github.com/sounisi5011/test-if-we-can-run-go-task-on-windows-on-github-workflow/pull/2/commits/682775bb50ed43ddafe2de439366c747b869e874 )

    This makes it easier to see the logs.

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -68,14 +68,31 @@ jobs:
           echo '{}' > ./package.json
           npm install '@go-task/cli@${{ env.go-task-version }}'
 
-      - name: Run task command
-        shell: bash
-        run: |
-          if [[ -f ./node_modules/.bin/task.exe ]]; then
-            ./node_modules/.bin/task.exe --version
+          readonly local_bin_dir='node_modules/.bin'
+          echo '[command]which task'
+          if which task; then
+            :
+          elif [[ -f "./${local_bin_dir}/task.exe" ]]; then
+            local_bin_dir_fullpath="$(cygpath --windows "$(realpath "./${local_bin_dir}")")"
+            readonly local_bin_dir_fullpath
+            echo "task.exe was installed in ${local_bin_dir_fullpath}"
+            realpath "${local_bin_dir_fullpath}" >> "${GITHUB_PATH}"
           else
-            task --versiond
+            find "$(npm bin)" "$(npx node -p 'process.env.npm_config_prefix')" -type f -name 'task.exe' -print0 | while read -r -d '' task_filepath; do
+              task_dirpath="$(cygpath --windows "$(dirname "${task_filepath}")")"
+              echo "task.exe was installed in ${task_dirpath}"
+              echo "${task_dirpath}" >> "${GITHUB_PATH}"
+            done
           fi
+
+      - name: Show the path where the task command is installed
+        shell: pwsh
+        # see https://qiita.com/Hiraku/items/e42bc5756157949a9742
+        run: (Get-Command task).Definition
+
+      - name: Run task command
+        shell: cmd
+        run: task --version
 
   install-using-chocolatey:
     runs-on: windows-latest
@@ -83,7 +100,13 @@ jobs:
       - name: Install go-task
         run: choco install go-task --version ${{ env.go-task-version }} --allow-multiple-versions --yes
 
+      - name: Show the path where the task command is installed
+        shell: pwsh
+        # see https://qiita.com/Hiraku/items/e42bc5756157949a9742
+        run: (Get-Command task).Definition
+
       - name: Run task command
+        shell: cmd
         run: task --version
 
   install-from-github-release:
@@ -98,5 +121,11 @@ jobs:
             dirname "${task_filepath}" >> "${GITHUB_PATH}"
           done
 
+      - name: Show the path where the task command is installed
+        shell: pwsh
+        # see https://qiita.com/Hiraku/items/e42bc5756157949a9742
+        run: (Get-Command task).Definition
+
       - name: Run task command
+        shell: cmd
         run: task --version
